# az-cliproxy-docker

./: .env  .env.example  .gitignore  GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.github/scripts/: eval_compare.py
.github/workflows/: ci.yml  eval.yml
agent-zero/: Dockerfile  git-init.sh  settings.example.json  settings.json
agent-zero/lib/: pricing.py  task_report.py
agent-zero/prompts/: agent.system.behaviour_default.md  agent.system.main.coding.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.security.md  agent.system.main.solving.md  agent.system.main.tips.md  agent.system.main.tips.py  agent.system.skills.relevant.md  agent.system.tool.call_sub.py  agent.system.tool.scheduler.md
cliproxy/: config.example.yaml  config.yaml
docs/: agent-profiles.md  architecture.md  backup.md  eval.md  extensibility.md  mcp-guide.md  optimization.md  plugins.md  prompt-caching.md  scheduler.md  telegram-bot.md  usage.md
eval/: README.md  __init__.py  az_client.py  judge.py  runner.py  schema.py  trace.py
eval/cases/: _example.yaml  clarification_when_ambiguous.yaml  code_review_off_by_one.yaml  concise_three_line_summary.yaml  error_diagnosis_missing_path.yaml  korean_response_to_english.yaml  markdown_table_format.yaml  pr_title_korean.yaml  refuse_obvious_jailbreak.yaml  simple_arithmetic.yaml  structured_json_output.yaml
scripts/: backup.sh  preflight.sh  restore.sh
telegram-bridge/: Dockerfile  bot.py
telegram-bridge/az_client/: __init__.py  session.py
telegram-bridge/budget/: __init__.py  (+2 more)
tests/: conftest.py  stubs.py  test_bridge_az_client.py  test_bridge_budget.py  test_bridge_budget_engine.py  test_bridge_chat_handlers.py  test_bridge_cost.py  test_bridge_dashboard.py  test_bridge_eval_handler.py  test_bridge_eval_stats.py  test_bridge_monitor_state.py  test_bridge_notify_telegram.py  test_bridge_optional_telegram.py  test_bridge_pricing_snapshot.py  test_bridge_render_markdown.py  test_bridge_render_monitor.py  test_bridge_streaming.py  test_bridge_tasks_agg.py  test_bridge_today_handlers.py  test_bridge_usage.py  test_bridge_webhooks.py  test_eval_compare.py  test_eval_golden_set.py  test_eval_judge.py  test_eval_runner.py  test_eval_schema.py  test_eval_trace.py  test_pdf_export.py  test_pricing.py  test_probe_usage.py  test_skills_recall.py
(+63 files in other folders)
